# opengl_cpp

./: .gitignore  CMakeLists.txt  MCP_SERVER_PLAN.md  README.md  msvc_compilation_guide.md  specification.md
batches/: build_debug.bat  build_release.bat  clean_build.bat  help.bat  run_debug.bat  run_release.bat
docs/: README.md
mcp-server/: pyproject.toml
mcp-server/src/: stl_viewer_server.py
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  model_loader.cpp  model_loader.h  shader.cpp  shader.h  viewer.cpp  viewer.h
