[project]
name = "stl-viewer-mcp-server"
version = "1.0.0"
description = "MCP server for STL 3D model viewer"
authors = [
    { name = "STL Viewer Team" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
stl-viewer-mcp = "stl_viewer_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
